<resources>
    <string name="app_name">SHT75</string>

    <string name="plot">Plot</string>
    <string name="notification">Notification settings</string>
    <string name="sensor1_MainActivity">Sensor N1</string>
    <string name="sensor2_MainActivity">Sensor N2</string>
    <string name="sensor3_MainActivity">Sensor N3</string>
    <string name="sensor4_MainActivity">Sensor N4</string>
    <string name="sensor5_MainActivity">Sensor N5</string>
    <string name="humidity_MainActivity">Humidity</string>
    <string name="temperature_MainActivity">Temperature</string>
    <string name="signed_in">Successfully signed in. Welcome</string>
    <string name="could_not_sign_you_in">Could not sign you in. Please try again later</string>
    <string name="could_not_refresh_token">Could not refresh token for Notifications</string>


    <string-array name="notification_array">
        <item>Under</item>
        <item>Above</item>
    </string-array>
    <string name="on_off_notification">Notification OFF/ON</string>
    <string name="mute_notification">Mute notifications</string>
    <string name="threshold">Choose humidity threshold, %</string>
    <string name="set_threshold">Set threshold</string>
    <string name="under_above">Choose under or Above</string>

    <string name="sensor1">1</string>
    <string name="sensor2">2</string>
    <string name="sensor3">3</string>
    <string name="sensor4">4</string>
    <string name="sensor5">5</string>


</resources>
